# project-05-bank-analysis-AI

./: README.md  app.py  gabarito.ipynb  inicial.ipynb  pyproject.toml  solution.ipynb
